--- a/gwas-1.rmd
+++ b/gwas-1.rmd
@@ -1,11 +1,7 @@
 ---
-title: GWAS tutorial
+title: 'GWAS tutorial: Data formats, summary statistics, and quality control'
 author: Patrick Breheny
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
-output:
-  html_document:
-    toc: true
-    toc_float: true
 ---
 
 ```{r knitr_setup, include=FALSE, purl=FALSE}
@@ -189,6 +185,16 @@ ggbox <- function (X, xlab = "ind", ylab = "values") {
 
 I'm also defining a little shortcut function for box plots.
 
+## Chromosome check
+
+This isn't exactly a QC step, but extremely helpful to do as a first step when getting any genetic data: what chromosomes are the SNPs on?
+
+```{r chr}
+table(obj$map$chromosome)
+```
+
+For the most part, the chromosomes are ordered by size, so chromosomes 1 and 2 are much bigger, and have many more SNPs, than chromosomes 21 and 22.  This particular data set only contains SNPs from the "autosomal" chromosomes (1-22); we do not have any data on X and Y chromosomes.  Also, there are no "strange" chromosomes, such as MT (the mitochondrial chromosome), XY (the pseudo-autosomal region of chromosome X), and 0 (SNPs that cannot be mapped to any chromosomes, which can happen for a variety of reasons).  Depending on the scientific goal, we may wish to subset our analysis down to include only the autosomal chromosomes, although this isn't necessary here since it has already been done.
+
 ## Missing data
 
 Any SNP with a lot of missing data is probably questionable; these SNPs are often excluded from analysis (although we will talk about other approaches later).  Likewise, any sample with lots of missing data suggests that there may be issues with the processing of that sample.
@@ -198,103 +204,7 @@ ggbox(rs$Call.rate, 'Individuals', 'Call rate')
 ggbox(cs$Call.rate, 'SNPs', 'Call rate')
 ```
 
-Individuals look good -- SNPs, on the other hand, there are definitely some SNPs with lots of missing values.  A common practice is to exclude SNPs with >5% missing data.  You could do this via:
-
-```{r subset-1}
-# (obj$genotypes <- obj$genotypes[, cs$Call.rate > 0.95])
-# obj$map <- obj$map[cs$Call.rate > 0.95, ]
-```
-
-However, I'm commenting these lines out for now, since if we subset the data at this point, it won't match the column summaries, etc.
-
-### Imputation
-
-A common method of dealing with SNPs with missing data is imputation. This involves replacing missing SNP values with what these values are predicted to be, based on a subjects' surrounding SNP values that are not missing. 
-
-We can first check how many SNPs have any missing data:
-```{r, any-miss}
-table(cs$Call.rate == 1)
-```
-This tells us that 172633 SNPs have no missingness, while 688840 have some level of missingness. We will try to impute values for these SNPs using the `snp.imputation()` function from `snpStats`. `snp.imputation()` has many options and things that can be tweaked. We will perform a basic imputation for now, but see its documentation for more details. `snpStats` uses a two step imputation procedure where we first determines a set of "tag" SNPS, which will be used to help predict the missing SNP values. These "tag" SNPs are then used to generate prediction rules for the missing SNPs. Then, these prediction rules are applied to our genotype matrix and missing SNP values are imputed. It is possible for the rules to not yield a predictions for SNPs with insufficient data or tagging SNPs as we'll see.
-
-```{r, impute}
-# determine tagging SNPs. Note: this can take a few minutes
-rules <- snp.imputation(obj$genotypes, minA=0) 
-
-# apply the prediction rules to missing SNPs and output an imputed SnpMatrix object
-imputed <- impute.snps(rules, obj$genotypes, as.numeric=FALSE)
-
-# how many SNPs still have missing data after imputation?
-cs.imputed <- col.summary(imputed)
-table(cs.imputed$Call.rate == 1)
-```
-Even after imputation, there are still 305651 SNPs with missing data. If a large proportion of these SNPs are missing, we may wish to exclude them.
-
-```{r}
-# how many SNPs cannot be imputed and still have >= 50% missing values?
-table(cs.imputed$Call.rate <= 0.5)
-# these look weird I think because there are non-polygenic snps and maybe nonstandard chr included...
-
-# looking at the map file there are a lot of NA alleles (?)
-# > sum(is.na(obj$map$allele.1))
-# [1] 26154
-# > sum(is.na(obj$map$allele.2))
-# [1] 1
-
-# throw out SNPs that have >= 50% missingness, even after imputation
-# imputed2 <- imputed[, cs.imputed$Call.rate > 0.5]
-
-# impute remaining missing values with HWE expected value (SNP mean)
-# missing <- table(snpStats::col.summary(out2)$Call.rate == 1)
-
-# which SNPs have missingness
-# to_impute <- which(cs.imputed$Call.rate < 1)
-
-# subset to a SnpMatrix with only SNPs with some missingness - we want to loop
-# over these to replace missing values with the mean, but it's a waste of time
-# to loop over the SNPs with no missingness 
-# miss <- imputed[, to_impute]
-
-# this is done in a way where only one SNP at a time is converted to a numeric - otherwise this
-# is computationally too expensive in R
-# imputed_mean <- sapply(1:ncol(miss), function(x){
-#   s <- drop(as(miss[,x], 'numeric'))
-#   if (all(is.na(s))) {
-#     print(x)
-#     return(miss[,x])
-#   } else {
-#     idx <- which(is.na(s)) # look for missing values in a numeric vector
-#     s[idx] <- mean(s, na.rm = TRUE) # replace missing values with that SNP's mean
-#     raw <- snpStats::mean2g(s) # convert the numeric SNP vector back to its raw, memory friendly form
-#   return(raw)
-#   }
-# })
-# 
-# imputed3 <- imputed2
-# imputed3@.Data[, to_impute] <- imputed_mean
-```
-
-
-
-## Sex check
-
-Since we have genetic data on these individuals, including the X chromosome, we can determine (or at least, estimate) their "genetic sex" and compare that to the sex that is recorded in their clinical information.  A discrepancy is very troubling, as it may be the result of a sample being switched or mis-labeled (there are other explanations as well).
-
-I am not aware of a function in `snpStats` that does this, so you'll have to use PLINK for this.  The relevant command is called `--check-sex`.
-
-So, your assignment:
-
-1. Run the `--check-sex` command in PLINK (this will generate an output file)
-2. Read that file back into R
-3. Check to see if there are any mismatches between the sex recorded in `clinical.csv` and the genetically determined sex.
-
-You'll need to read the relevant documentation for this; for example, [here's the 1.9 documentation](https://www.cog-genomics.org/plink/1.9/basic_stats#check_sex).
-
-Note that there are no discepancies between the sex recorded in `clinical.csv` and the one recorded in the `.fam` file:
-
-```{r check-sex}
-table(obj$fam$sex, clinical$sex)
-```
+Individuals look good -- SNPs, on the other hand, there are definitely some SNPs with lots of missing values.  A common practice is to exclude SNPs with >5% or >10% missing data.  We'll actually do the subsetting a little later, right now we're just exploring.
 
 ## Minor allele frequency
 
@@ -326,6 +236,27 @@ table(cs$MAF < 0.001)
 table(as(obj$genotypes[,62], 'numeric'))
 ```
 
+Finally, it is worth noting that no matter what the sample size, monomorphic SNPs (i.e., SNPs that show no genetic variation whatsoever in the sample) are usually problematic and should always be removed.  Some code crashes when monomorphic SNPs are included; even if this weren't the case, these SNPs cannot possibly be informative in a genome-wide association study.
+
+```{r monomorph}
+table(cs$MAF == 0)                 # >26000 monomorphic SNPs
+obj$map[head(which(cs$MAF==0)),]   # Note that "allele.1' is missing for these SNPs
+```
+
+## Sex check
+
+In general, since we have genetic data on the individuals in the sample, including the X chromosome, we can determine (or at least, estimate) their "genetic sex" and compare that to the sex that is recorded in their clinical information.  A discrepancy is very troubling, as it may be the result of a sample being switched or mis-labeled (there are other explanations as well).
+
+Unfortunately, this data set does not include the X chromosome, so we can't show that step here.  Need to think of a better way to handle this....
+
+In general, though, you have to use PLINK for this.  The relevant command is called `--check-sex`.  The relevant documentation: [1.9 documentation](https://www.cog-genomics.org/plink/1.9/basic_stats#check_sex).
+
+Note that there are no discepancies between the sex recorded in `clinical.csv` and the one recorded in the `.fam` file:
+
+```{r check-sex}
+table(obj$fam$sex, clinical$sex)
+```
+
 ## Hardy-Weinberg equilibrium
 
 The [Hardy-Weinberg principle](https://en.wikipedia.org/wiki/Hardy-Weinberg_principle) states that under the assumption of random mating, the distribution of genotypes should follow a binomial distribution with probability $\pi$ equal to the MAF.  If this doesn't happen, this is an indication that either:
@@ -344,23 +275,6 @@ table(p_hwe < 10^(-10))
 table(as(obj$genotypes[,which.max(cs$z.HWE)], 'character'))
 ```
 
-<!-- ## Polygenic and chromosome checks -->
-
-<!-- Another element of the SNP ("column") level summaries to pay attention to are the columns -->
-
-<!-- * P.AA (proportion of subjects homozygous for Allele 1) -->
-<!-- * P.AB (proportion of subjects heterozygous) -->
-<!-- * P.BB (proportion of subjects homozygous for Allele 2) -->
-
-<!-- In general, only SNPs that have some level of variability will be informative for analysis. For example, if some subjects have a condition and others don't, but they all have the same genotype for -->
-<!-- a particular SNP, that SNP isn't going to give us any information about that condition or trait. -->
-
-<!-- Only keep polygenic SNPs and those on chr1:22 -->
-<!--   genotypes <- obj$genotypes[, snpStats::col.summary(obj$genotypes)$P.AA != 1 & -->
-<!--                                snpStats::col.summary(obj$genotypes)$P.AB != 1 & -->
-<!--                                snpStats::col.summary(obj$genotypes)$P.BB != 1 & obj$map$chromosome %in% 1:22] -->
-
-
 ## Heterozygosity
 
 A somewhat similar idea, but applied to individuals instead of SNPs (if an individual had a ton of A/B calls but no A/A or B/B calls, or vice versa, that would indicate something was wrong):
@@ -374,3 +288,31 @@ No big outliers here, though.
 ## Relatedness
 
 Another common QC check that people apply is to see whether anyone in their data set is related to each other (i.e., their genomes are far more similar than the genomes of two unrelated people).  This makes sense, as most statistical methods assume independent samples and if you have, say, two sisters in the analysis, they're not really independent.  However, the tools for assessing relatedness are...ahem...related to methods for assessing population structure, which is a complex topic that I'll discuss later.
+
+## Pipeline
+
+OK, now that we've surveyed all these QC concepts, let's actually do some filtering.  I might choose to do something like this:
+
+```{r qc-pipe}
+keep <- cs$MAF > 0.001 &
+  cs$Call.rate > 0.9 &
+  abs(cs$z.HWE) < 6.5
+table(keep)
+```
+
+So, we're getting rid of about 100,000 SNPs and keeping about 750,000.
+
+Now, let's actually do the subsetting.  **IMPORTANT:** The key thing to remember here is that you need to subset both the `map` object and the genotypes -- if you don't, these objects will no longer match and you will end up with a devastating row mismatch problem.
+
+```{r subset-1}
+(obj$genotypes <- obj$genotypes[, keep])
+obj$map <- obj$map[keep, ]
+```
+
+In principle, we might also be throwing some subjects out at this point, but in this particular example, none of the subjects looked questionable.  Again, if throwing away subjects, you need to remember to also subset the `fam` object and the clinical data table.
+
+Let's save this QC'd data set for future use in downstream analyses:
+
+```{r save}
+saveRDS(obj, 'data/gwas-qc.rds')
+```
